<!--
  Copyright 2012 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">AFE-Demos</string>
    <string name="title_activity_about">About this app</string>
    <string name="title_activity_default">Default behavior with Toast</string>
    <string name="title_activity_default_fragment">Default behavior with Dialog</string>
    <string name="title_activity_dont_stop">Show all errors</string>
    <string name="title_activity_resume_next">Stop at 1st error for each items</string>
    <string name="title_activity_custom_messages">Custom messages</string>
    <string name="title_activity_custom_validator">Custom validator</string>
    <string name="title_activity_custom_email_pattern">Custom email pattern</string>
    <string name="title_activity_focus_out_validation">Focus out validation</string>
    <string name="title_activity_sample_fragment">Using fragment</string>
    <string name="title_activity_custom_error_icon">Custom error icon</string>
    <string name="title_activity_custom_required_when">Required when</string>
    <string name="title_activity_entry">Entry sample (for Japanese)</string>
    <string name="title_activity_multiple_checkbox">Multiple checkboxes(dynamically generated)</string>
    <string name="form_default_name">Name</string>
    <string name="form_default_hiragana">Name(Hiragana)</string>
    <string name="form_default_katakana">Name(Katakana)</string>
    <string name="form_default_age">Age</string>
    <string name="form_default_gender">Gender</string>
    <string name="form_radio_gender_male">Male</string>
    <string name="form_radio_gender_female">Female</string>
    <string name="form_default_phone">Phone number</string>
    <string name="form_default_birthday">Birthday</string>
    <string name="form_default_credit_card_company">Credit card company</string>
    <string name="form_default_got_to_know_by">Where did you know?</string>
    <string name="form_multiple_checkbox_sample">Items</string>
    <string name="form_default_email">E-mail address</string>
    <string name="form_checkbox_got_to_know_by_tv">TV</string>
    <string name="form_checkbox_got_to_know_by_internet">Internet</string>
    <string name="form_checkbox_got_to_know_by_twitter">Twitter</string>
    <string name="form_checkbox_got_to_know_by_facebook">Facebook</string>
    <string name="form_sample_custom_sample">Sample</string>
    <string name="form_custom_required_when_reason">Reason</string>
    <string name="form_custom_required_when_reason_other">Other</string>
    <string name="form_entry_last_name">Last name</string>
    <string name="form_entry_first_name">First name</string>
    <string name="form_entry_last_name_kana">Last name ruby(for Japanese)</string>
    <string name="form_entry_first_name_kana">First name ruby(for Japanese)</string>
    <string name="form_entry_birthday">Birthday</string>
    <string name="form_entry_gender">Gender</string>
    <string name="form_entry_gender_male">Male</string>
    <string name="form_entry_gender_female">Female</string>
    <string name="form_entry_phone_home">Phone(Home)</string>
    <string name="form_entry_phone_mobile">Phone(Mobile)</string>
    <string name="form_entry_email_mobile">Mobile Email</string>
    <string name="form_entry_email_pc">Email</string>
    <string name="form_entry_zip_code">Zip code</string>
    <string name="form_entry_address1">Address1</string>
    <string name="form_entry_address2">Address2</string>
    <string name="form_entry_address3">Address3</string>
    <string name="form_entry_address4">Address4</string>
    <string name="form_entry_password">Password</string>
    <string name="form_entry_password_retype">Password(retype)</string>
    <string name="form_entry_residence_type">Residence</string>
    <string name="form_entry_residence_year">Residence Years</string>
    <string name="form_entry_residence_month">Residence Months</string>
    <string name="desc_custom_email_pattern">Valid pattern:\n^\\w+@([\\w][\\w-]*\\.)+[\\w][\\w-]*$</string>
    <string name="desc_custom_error_icon">Error icons shown in the EditText is changed by style.</string>
    <string name="desc_custom_required_when">If you select the 3rd option in \"Reason\", you must input \"Other\".</string>
    <string name="btn_submit">Submit</string>
    <string name="custom_msg_validation_required">[%1$s] is required.</string>
    <string name="custom_msg_validation_required_selection">[%1$s] must be selected.</string>
    <string name="custom_msg_validation_required_multiple_selection">[%1$s] must be selected at least [%2$d].</string>
    <string name="custom_msg_validation_int_type">[%1$s] must be an integer.</string>
    <string name="custom_msg_validation_digits">[%1$s] must be digits.</string>
    <string name="custom_msg_validation_min_value">[%1$s] must be more than or equal to [%2$d].</string>
    <string name="custom_msg_validation_max_value">[%1$s] must be less than or equal to [%2$d].</string>
    <string name="custom_msg_validation_int_range">[%1$s] is not in the range [%2$d] through [%3$d].</string>
    <string name="custom_msg_validation_multibyte">[%1$s] must be multibyte characters.</string>
    <string name="custom_msg_validation_hiragana">[%1$s] must be hiragana characters.</string>
    <string name="custom_msg_validation_katakana">[%1$s] must be katakana characters.</string>
    <string name="custom_msg_validation_singlebyte">[%1$s] must be singlebyte characters.</string>
    <string name="custom_msg_validation_length">[%1$s] must be [%2$d] characters.</string>
    <string name="custom_msg_validation_max_length">[%1$s] must be less than [%2$d] characters.</string>
    <string name="custom_msg_validation_num_of_digits">[%1$s] must be [%2$d] digits.</string>
    <string name="custom_msg_validation_max_num_of_digits">[%1$s] must be less than [%2$d] digits.</string>
    <string name="custom_msg_validation_regex">[%1$s] is invalid.</string>
    <string name="custom_msg_validation_email">[%1$s] is invalid e-mail address.</string>
    <string name="custom_msg_validation_date">[%1$s] is invalid date.</string>
    <string name="custom_msg_validation_past_date">[%1$s] must be past date.</string>
    <string name="msg_validation_sample">%1$s must be A.</string>
    <string name="msg_default_date">Please select</string>
    <string name="msg_version">Version</string>
    <string name="msg_copyright">&amp;copy; 2012 Soichiro Kashima All rights reserved.</string>
    <string name="msg_about_description">Demo app for AndroidFormEnhancer.</string>
    <string name="msg_about_fork_me_on_github">Fork me on GitHub!</string>
    <string name="msg_about_github_url">https://github.com/ksoichiro/AndroidFormEnhancer</string>
    <string name="msg_about_afe_description">AndroidFormEnhancer is a library for implementing input forms easily in the Android application.</string>
    <string name="menu_about">About</string>
    <string name="custom_email_pattern">^\\w+@([\\w][\\w-]*\\.)+[\\w][\\w-]*$</string>

</resources>