<!--
  Copyright 2012 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onSubmit"
        android:text="@string/btn_submit" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_submit" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_last_name" />

            <EditText
                android:id="@+id/textfield_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_first_name" />

            <EditText
                android:id="@+id/textfield_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_last_name_kana" />

            <EditText
                android:id="@+id/textfield_last_name_kana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_first_name_kana" />

            <EditText
                android:id="@+id/textfield_first_name_kana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_birthday" />

            <Button
                android:id="@+id/textfield_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_gender" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_entry_gender_male" />

                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_entry_gender_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_phone_home" />

            <EditText
                android:id="@+id/textfield_phone_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_phone_mobile" />

            <EditText
                android:id="@+id/textfield_phone_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_email_mobile" />

            <EditText
                android:id="@+id/textfield_email_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_email_pc" />

            <EditText
                android:id="@+id/textfield_email_pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_zip_code" />

            <EditText
                android:id="@+id/textfield_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_address1" />

            <EditText
                android:id="@+id/textfield_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_address2" />

            <EditText
                android:id="@+id/textfield_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_address3" />

            <EditText
                android:id="@+id/textfield_address3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_address4" />

            <EditText
                android:id="@+id/textfield_address4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_password" />

            <EditText
                android:id="@+id/textfield_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_password_retype" />

            <EditText
                android:id="@+id/textfield_password_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_residence_type" />

            <Spinner
                android:id="@+id/spn_residence_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/form_entries_residence" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_residence_year" />

            <EditText
                android:id="@+id/textfield_residence_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_entry_residence_month" />

            <EditText
                android:id="@+id/textfield_residence_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>